[project]
name = "adv-mla-at1-25544646"
version = "2025.0.1.2"
description = ""
packages = [{ include = "adv_mla_at1_25544646", from = "src" }]
authors = [
    {name = "kittituch wongwatcharapaiboon"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (==2.2.2)",
    "scikit-learn (==1.5.1)",
    "pytest (==8.2.2)",
    "jupyterlab (==4.2.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "8.2.2"
jupyterlab = "4.2.3"

