[tool.poetry]
name = "my_krml_25544646"
version = "0.1.0"
description = "creating custom package using testpypi for assessment 1 in advanced machine learning subject at uts 2025"
authors = ["kittituch wongwatcharapaiboon"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.4"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]                                                    # version location
branch = "main"                                      # branch to make releases of
changelog_file = "CHANGELOG.md"                      # changelog file
build_command = "pip install poetry && poetry build" # build dists 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
